# Yubikey

./: README.md  bom.csv  yubikey.csv
yubikey/: bom.csv  fp-lib-table  yubikey.kicad_pcb  yubikey.kicad_pro  yubikey.kicad_sch
yubikey/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
yubikey/yb_rp2040/: CMakeLists.txt  pico_sdk_import.cmake
yubikey/yb_rp2040/include/: u2f_transport.h  usb_descriptors.h
yubikey/yb_rp2040/src/: atecc_driver.c  atecc_driver.h  main.c  u2f_transport.c  usb_descriptors.c
